--- a/templates/index.html
+++ b/templates/index.html
@@ -3,25 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo com TailwindCSS</title>
+    <title>Walk the Talk | O que as empresas dizem que fazem - e o que realmente fazem - em relação à pauta ESG</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
-    <script src="https://unpkg.com/htmx.org"></script>
-    <script>
-      document.getElementById('search').addEventListener('input', function() {
-          fetch(`/busca_empresas?q=${encodeURIComponent(this.value)}`)
-              .then(response => response.json())
-              .then(data => {
-                  const dataList = document.getElementById('empresas-sugeridas');
-                  dataList.innerHTML = '';  // Limpa sugestões antigas
-                  data.forEach((company) => {
-                      const option = document.createElement('option');
-                      option.value = company;
-                      dataList.appendChild(option);
-                  });
-              });
-      });
-      </script>      
-      
     <style>
       .custom-placeholder::placeholder {
           color: #022C22; /* Esta é a cor correspondente a text-emerald-950 no Tailwind CSS */
@@ -36,24 +22,16 @@
       <div class="hero-content text-center text-neutral-content">
         <div class="max-w-full">
           <h1 class="mb-5 text-9xl font-serif">Walk the Talk</h1>
-          <p class="mb-5 text-xl font-sans font-light">O que as empresas dizem que fazem - e o que realmente fazem - em relação à pauta ESG.</p>
-          <label class="input input-bordered flex items-center gap-2 bg-emerald-100">
-            <input type="text" name="search" id="search" list="empresas_sugeridas" autocomplete="on" autocorrect="off" autocapitalize="off" spellcheck="false" class="grow custom-placeholder text-emerald-950" placeholder="Busque pelo nome da empresa" />
-            <datalist id="empresas_sugeridas">
-              <!-- As opções serão inseridas aqui via JavaScript -->
-            </datalist>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="w-4 h-4 opacity-70"><path fill-rule="evenodd" d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z" clip-rule="evenodd" /></svg>
+          <p class="mb-5 text-xl font-sans font-thin">O que as empresas dizem que fazem - e o que realmente fazem - em relação à pauta ESG.</p>
+          <label class="input input-bordered relative flex items-center gap-2 bg-emerald-100 max-w-xl mx-auto">
+            <input type="text" name="search" id="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" class="grow custom-placeholder text-emerald-950" placeholder="Digite o nome da empresa ou uma área de atuação" />
+            <div id="suggestions-container" class="absolute right-12 z-10 w-auto max-w-xl mt-1 bg-emerald-800 bg-opacity-95 backdrop-blur-sm text-emerald-50 text-left rounded-md shadow-lg overflow-hidden">
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="emerald-950" class="w-6 h-6"><path fill-rule="evenodd" d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z" clip-rule="evenodd" /></svg>
           </label>
       </div>
     </section>
-
-    <!-- Text Area -->
-<div class="flex flex-col w-full lg:flex-row">
-  <div class="grid flex-grow h-32 card bg-base-300 rounded-box place-items-center">content</div> 
-  <div class="divider lg:divider-horizontal">OR</div> 
-  <div class="grid flex-grow h-32 card bg-base-300 rounded-box place-items-center">content</div>
-</div>
-
+    
     <!-- Rodapé -->
     <footer class="footer items-center p-4 bg-neutral text-neutral-content">
       <aside class="items-center grid-flow-col">
@@ -67,5 +45,31 @@
         <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
       </nav>
     </footer>
+    <script>
+    document.getElementById('search').addEventListener('input', function() {
+  const inputVal = this.value;
+  // Verifica se o usuário digitou 3 ou mais caracteres
+  if (inputVal.length >= 3) {
+    fetch(`/busca?q=${encodeURIComponent(inputVal)}`)
+      .then(response => response.json())
+      .then(data => {
+        const suggestionsContainer = document.getElementById('suggestions-container');
+        suggestionsContainer.innerHTML = ''; // Limpa sugestões antigas
+        data.forEach((item) => {
+          const div = document.createElement('div');
+          div.textContent = item.name;
+          div.classList.add("p-2", "hover:bg-emerald-900", "cursor-pointer");
+          div.onclick = function() {
+            window.location.href = `/empresa/${item.slug}`;
+          };
+          suggestionsContainer.appendChild(div);
+        });
+      });
+  } else {
+    // Limpa as sugestões se o comprimento da string for menor que 3
+    document.getElementById('suggestions-container').innerHTML = '';
+  }
+});
+    </script>    
 </body>
 </html>
