Novos ajustes na exibição

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walk the Talk | O que as empresas dizem que fazem - e o que realmente fazem - em relação à pauta ESG</title>
+    <title>{{ site_title }} | {{ site_subtitle }}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
@@ -21,8 +21,8 @@
       <div class="hero-overlay bg-opacity-95 bg-emerald-950"></div>
       <div class="hero-content text-center text-neutral-content">
         <div class="max-w-full">
-          <h1 class="mb-5 text-9xl font-serif">Walk the Talk</h1>
-          <p class="mb-5 text-xl font-sans font-thin">O que as empresas dizem que fazem - e o que realmente fazem - em relação à pauta ESG.</p>
+          <h1 class="mb-5 text-6xl lg:text-9xl font-serif">{{ site_title }}</h1>
+          <p class="mb-5 text-xl font-sans font-thin">{{ site_subtitle }}</p>
           <label class="input input-bordered relative flex items-center gap-2 bg-emerald-100 max-w-xl mx-auto">
             <input type="text" name="search" id="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" class="grow custom-placeholder text-emerald-950" placeholder="Digite o nome da empresa ou uma área de atuação" />
             <div id="suggestions-container" class="absolute right-12 z-10 w-auto max-w-xl mt-1 bg-emerald-800 bg-opacity-95 backdrop-blur-sm text-emerald-50 text-left rounded-md shadow-lg overflow-hidden">
