--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,8 @@
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="emerald-950" class="w-6 h-6"><path fill-rule="evenodd" d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z" clip-rule="evenodd" /></svg>
           </label>
+          <a class="btn btn-outline btn-ghost mt-5 mr-4" href="/lista-empresas">Todas as empresas</a>
+          <a class="btn btn-outline btn-ghost mt-5" href="/sobre">Sobre o projeto</a>
       </div>
     </section>
     
