Ajustes no layout

--- a/templates/empresa.html
+++ b/templates/empresa.html
@@ -26,6 +26,7 @@
           <h3 class="text-xl font-semibold">Histórico</h3>
           <p>{{ documentos[0].HistoricoEmissor.resumo_historico }}</p>
       </div>
+      <div class="divider divider-neutral"></div>
       <div class="mt-8">
           <h3 class="text-xl font-semibold">Áreas de Atuação</h3>
           <ul class="list-disc list-outside space-y-2 mt-2 px-5">
