--- a/templates/header.html
+++ b/templates/header.html
@@ -6,33 +6,18 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
             </div>
             <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                <li>
-                    <a>Dados</a>
-                    <ul class="p-2">
-                        <li><a href="/lista-empresas">Lista de empresas</a></li>
-                        <li><a href="/relatorios-esg">Relatórios ESG</a></li>
-                    </ul>
-                </li>
-                <li><a href="/sobre">Sobre</a></li>
+                <li><a href="/sobre">Sobre o projeto</a></li>
+                <li><a href="/lista-empresas">Lista de empresas</a></li>
+                <li><a href="/relatorios-esg">Relatórios ESG</a></li>
             </ul>
         </div>
         <a class="btn btn-ghost font-serif last:text-xl" href="/">{{ site_title }}</a>
     </div>
-    <div class="navbar-center hidden lg:flex">
+    <div class="navbar-end hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
             <li><a href="/sobre">Sobre o projeto</a></li>
-            <li>
-                <details>
-                    <summary>Dados</summary>
-                    <ul class="p-2 w-48">
-                        <li><a href="/lista-empresas">Lista de empresas</a></li>
-                        <li><a href="/relatorios-esg">Relatórios ESG</a></li>
-                    </ul>
-                </details>
-            </li>
+            <li><a href="/lista-empresas">Lista de empresas</a></li>
+            <li><a href="/relatorios-esg">Relatórios ESG</a></li>
         </ul>
-    </div>
-    <div class="navbar-end">
-        <a class="btn" href="/faq">FAQ</a>
     </div>
 </header>
