--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     <div class="hero-content text-center text-neutral-content">
       <div class="max-w-full">
         <h1 class="mb-5 text-6xl lg:text-9xl font-serif">{{ site_title }}</h1>
-        <p class="mb-5 text-xl font-sans font-thin">{{ site_subtitle }}</p>
+        <p class="mb-5 text-xl font-sans font-light">{{ site_subtitle }}</p>
         <label class="input input-bordered relative flex items-center gap-2 bg-emerald-100 max-w-xl mx-auto">
           <input type="text" name="search" id="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" class="grow custom-placeholder text-emerald-950" placeholder="Digite o nome da empresa ou uma área de atuação" />
           <div id="suggestions-container" class="absolute right-12 z-10 w-auto max-w-xl mt-1 bg-emerald-800 bg-opacity-95 backdrop-blur-sm text-emerald-50 text-left rounded-md shadow-lg overflow-hidden">
